<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.register.RegisterActivity">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_name_margin_top"
            android:fontFamily="@font/montserrat_bold"
            android:lineSpacingExtra="16dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black_font_color"
            android:textSize="@dimen/book_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpfInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/inputs_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="text"
            android:textSize="@dimen/inputs_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cpfInput" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:textSize="@dimen/inputs_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameInput" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDateInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date_hint"
            android:inputType="text"
            android:textSize="@dimen/inputs_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastNameInput" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/inputs_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthDateInput" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passportInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passport_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInput" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            style="@style/inputs_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/inputs_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passportInput" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_start"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginEnd="@dimen/btn_margin_end"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>